--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -116,46 +116,47 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"我會列印出任何你想要的玩意兒 ── 只要你有那玩意兒的快取記憶體！",
- 	 	 	 	 	"Show me the cache and I will show you the result!",
+ 	 	 	 	 	"給我快取記憶體，我就給你成品！",
+ 	 	 	 	 	"請告訴我，你帶了一些史詩級的快取記憶體。",
  	 	 	 	 	"Please, tell me you have some Epic cache with you.",
- 	 	 	 	 	"Welcome. I hope you are a customer...",
- 	 	 	 	 	"If you got cache, I can print 'em!",
- 	 	 	 	 	"So glad we no longer use ink; I can wear my best clothes to work.",
- 	 	 	 	 	"Wonder why we never use our replicators to print food.",
- 	 	 	 	 	"Tea, Earl Grey, hot. Maybe even bubble tea. 😋",
- 	 	 	 	 	"Lemme see that cache of yours.",
- 	 	 	 	 	"Live long and prosper. 🖖",
- 	 	 	 	 	"I get excited every time I see a customer; maybe they have an Epic!",
- 	 	 	 	 	"I feel lonely at times. One day I'll buy a love bot or android to keep me company.",
- 	 	 	 	 	"Computers make excellent and efficient servants, but I have no wish to serve under them.",
- 	 	 	 	 	"Don't worry, we won't run out of ink.",
- 	 	 	 	 	"Sometimes I wonder what the outside world looks like. Will you tell me about it when you become famous?",
- 	 	 	 	 	"Just keep printing, just keep printing.",
- 	 	 	 	 	"I'm stuck here, but you're not. Win the war for me with your new gear!",
- 	 	 	 	 	"I'll take your cache; you'll take the gear!",
- 	 	 	 	 	"That new gear looks nice on you!",
- 	 	 	 	 	"I wish someone would print me some legs! I'd love to see what's outside of this room...",
- 	 	 	 	 	"I can print guns, yet I can't print myself a set of arms to greet you. Funny how that works...",
- 	 	 	 	 	"If you fancy yourself a new getup then bring me the cache. I'll make your dreams come true.",
- 	 	 	 	 	"I keep wondering who gets knocked out for you all to have so much cache.",
- 	 	 	 	 	"I only make cheesy puns because no one will print me some legs so I can find something better to do.",
- 	 	 	 	 	"I'm just a printer, but what I can make will help you get more cache.",
- 	 	 	 	 	"I heard that Bank of Arasaka is a good place to store caches if you can't afford to print them yet.",
- 	 	 	 	 	"The more gear I print, the more data I have. I get better at printing every day!",
- 	 	 	 	 	"Can you print me a coffee? All this printing is exhausting.",
- 	 	 	 	 	"Which one do you choose: Laser or Inkjet?",
- 	 	 	 	 	"You're not here to print lewd images again, are you?",
- 	 	 	 	 	"Print a duck",
- 	 	 	 	 	"Please tell me you have some White Epic cache with you.",
- 	 	 	 	 	"Just ran outta color ink. Hope ya like grayscale!",
- 	 	 	 	 	"Why haven't I printed a copy of myself yet?",
- 	 	 	 	 	"Sorry buddy, no free prints!",
- 	 	 	 	 	"Good thing I can't print Bitcoin.",
- 	 	 	 	 	"D-Don't print something stupid again, p-please.",
- 	 	 	 	 	"It took me an extra microsecond to boot today.",
- 	 	 	 	 	"Printing makes me happy!",
- 	 	 	 	 	"🎵 I'm just a lonely printer~ 🎶 No one will print me a friend~ 🎵",
- 	 	 	 	 	"Please stop trying to print pizzas.  The sauce clogs the machine nozzles."
+ 	 	 	 	 	"歡迎。我希望你是真的來消費的顧客...",
+ 	 	 	 	 	"如果你有快取記憶體，我可以列印它們！",
+ 	 	 	 	 	"很高興我們不再使用墨水列印，我可以穿我最好的衣服去工作",
+ 	 	 	 	 	"不知道為什麼，我們從來不用我們的複製器來列印食物。",
+ 	 	 	 	 	"茶，格雷伯爵茶，熱的。也許還有泡沫。😋",
+ 	 	 	 	 	"讓我看看你的快取記憶體。",
+ 	 	 	 	 	"活得長，活得好。🖖",
+ 	 	 	 	 	"每次看到顧客我都會很興奮；也許他們有史詩級的快取記憶體！",
+ 	 	 	 	 	"我有時會感到孤獨。有一天我會買一個戀愛機器人或 Android 機器人來陪伴我。",
+ 	 	 	 	 	"電腦是優秀而高效的僕人，但我不希望在它們手下服務。",
+ 	 	 	 	 	"別擔心，我們的墨水不會用完的。",
+ 	 	 	 	 	"有時我想知道外面的世界是什麼樣子的。當你成名時，你會回來告訴我嗎？",
+ 	 	 	 	 	"繼續列印吧，繼續列印吧。",
+ 	 	 	 	 	"我被困在這裡了，但你沒有。用你的新裝備為我贏得戰爭！",
+ 	 	 	 	 	"我拿你的快取記憶體，你拿裝備！",
+ 	 	 	 	 	"你的新裝備看起來不錯！",
+ 	 	 	 	 	"我希望有人能幫我印一些腿！我很想看看這個房間外面有什麼...",
+ 	 	 	 	 	"我可以列印槍枝，但我卻不能給自己列印一雙手臂來迎接你。多麼諷刺...",
+ 	 	 	 	 	"如果你看中了新裝備，那就多帶點錢。我會讓你夢想成真。",
+ 	 	 	 	 	"我一直在想是誰被打倒了，讓你們都有這麼多錢。",
+ 	 	 	 	 	"我只做俗氣的雙關語，因為沒有人願意給我印一些腿，這樣我就能找到更好的事情做。",
+ 	 	 	 	 	"我只是個印表機，但我能做出的東西會幫助你們獲得更多的快取記憶體。",
+ 	 	 	 	 	"我聽說荒坂銀行是一個儲存藏品的好地方，如果你還沒有能力列印它們的話。",
+ 	 	 	 	 	"我列印的裝備越多，我的資料就越多。我每天都會在列印方面變得更好！",
+ 	 	 	 	 	"你能為我列印一杯咖啡嗎？所有這些印刷都很累人。",
+ 	 	 	 	 	"你選擇哪一個：雷射還是噴墨？",
+ 	 	 	 	 	"你不會又是來列印色色的圖片吧？",
+ 	 	 	 	 	"列印一隻小黃鴨",
+ 	 	 	 	 	"請告訴我你帶了一些白色史詩級的快取記憶體。",
+ 	 	 	 	 	"剛用完彩色墨水。希望你喜歡黑白列印！",
+ 	 	 	 	 	"為什麼我還沒有列印一份自己的照片？",
+ 	 	 	 	 	"對不起，伙伴，沒有免費列印！",
+ 	 	 	 	 	"好在我不能列印 Bitcoin。",
+ 	 	 	 	 	"拜...拜託，請...請不要再列印一些愚蠢的東西。",
+ 	 	 	 	 	"今天我多花了一微秒的時間來開機。",
+ 	 	 	 	 	"列印使我快樂！",
+ 	 	 	 	 	"🎵我只是一個孤獨的印表機~ 🎶沒有人會給我列印一個朋友~ 🎵",
+ 	 	 	 	 	"請不要再嘗試列印披薩了。醬汁堵塞了機器的噴嘴"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -349,18 +350,18 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"插入一個校準核心到這台機器裡頭，我就能校準你的任何裝備。",
- 	 	 	 	 	"I'll help you calibrate your equipment, but it ain't my problem if it's destroyed in the process.",
- 	 	 	 	 	"My eyes are up here, bud—and so's my gun.",
- 	 	 	 	 	"You feelin' lucky? Go ahead and give the machine a try.",
- 	 	 	 	 	"All sales are final, all calibration is done at your own risk, and if you wanna take it up with a manager... you're lookin' at her.",
- 	 	 	 	 	"Name's Kamiko. That beauty over there is Cali. She's a bit... temperamental.",
- 	 	 	 	 	"Your gear's looking a little... well, it could be better. I can help you with that.",
- 	 	 	 	 	"It'll take a little while for Cali over here to decrypt the core you brought.",
- 	 	 	 	 	"Once you pop in the calibration core, it'll take... eh, 30 minutes or so. You can wait here, but I'd really prefer if you didn't.",
- 	 	 	 	 	"No, we don't sell calibration cores here. I provide the machine, you provide the cores. That's how things work here.",
- 	 	 	 	 	"Is there a chance that Cali will shred your gear? Sure. But is it worth the gamble? Definitely.",
- 	 	 	 	 	"What'll you be powering up today?",
- 	 	 	 	 	"Time to calibrate some gear!"
+ 	 	 	 	 	"我會幫你校準你的裝置，但如果它在這個過程中被破壞了，那就不是我的問題了。",
+ 	 	 	 	 	"我的眼睛在上面，兄弟，我的槍也在上面。",
+ 	 	 	 	 	"你覺得自己很幸運嗎？來吧，試一試這台機器。",
+ 	 	 	 	 	"所有商品售後概不退換，所有的校準都是在你同意風險之後進行的，如果你想跟經理說......你就看著她吧。",
+ 	 	 	 	 	"我叫 Kamiko。那邊的美女是 Cali。她有點......脾氣暴躁。",
+ 	 	 	 	 	"你的裝備看起來有點......嗯，它可以更好。我可以幫你解決這個問題。",
+ 	 	 	 	 	"Cali 需要一點時間來解密你帶來的核心。",
+ 	 	 	 	 	"一旦你彈出校準核心，這將需要......呃，30分鐘左右。你可以在這裡等，但我真的希望你不要這樣做。",
+ 	 	 	 	 	"不，我們這裡不賣校準核心。我提供機器，你提供核心。這就是這裡的運作方式。",
+ 	 	 	 	 	"Cali 有可能會粉碎你的裝備嗎？當然，但這值得一賭嗎？絕對值得。",
+ 	 	 	 	 	"你今天要給什麼供電？",
+ 	 	 	 	 	"是時候校準一些裝備了！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -383,30 +384,27 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"嗨，小伙子。我是李先生。記住，別總是把所有身家都帶在身上。",
- 	 	 	 	 	"Let's make a trade.",
- 	 	 	 	 	"You want it, I got it.",
- 	 	 	 	 	"So, whaddaya say? Up for a little exchange?",
- 	 	 	 	 	"Isn't it time you traded up?",
- 	 	 	 	 	"Your money's only so good here. Let's see what else you got.",
- 	 	 	 	 	"Welcome to my humble swap shop.",
- 	 	 	 	 	"Let's have a look at what you brought in.",
- 	 	 	 	 	"This ain't your average shop.",
- 	 	 	 	 	"What've you got for me?",
- 	 	 	 	 	"Pouches and packs for both fannies and backs!",
- 	 	 	 	 	"I'm looking for quantity over quality.",
- 	 	 	 	 	"Well? You got trades or not?",
- 	 	 	 	 	"Isn't every bag a bag of holding?",
- 	 	 	 	 	"Looks like you could use some more space to store stuff.",
- 	 	 	 	 	"Name's Lee. As in 'exact-lee' who you needed to see.",
- 	 	 	 	 	"Aren't you tired of lugging all your stuff around like that?",
- 	 	 	 	 	"Seems like someone needs a new backpack.",
- 	 	 	 	 	"If you love it, bag it!",
- 	 	 	 	 	"Your pockets seem full. I could help you lighten that load.",
- 	 	 	 	 	"How can you fight when your arms are so full of stuff?",
- 	 	 	 	 	"You know, you don't have to carry everything you own in your pockets.",
- 	 	 	 	 	"Here's the deal: You gimme your old bags, I give you a new bag.",
- 	 	 	 	 	"The way you're walking makes me think you're overencumbered.",
- 	 	 	 	 	"I'm who you talk to when you wanna secure the bag. Or the backpack."
+ 	 	 	 	 	"我們來做個交易吧。",
+ 	 	 	 	 	"你想要的，我都有。",
+ 	 	 	 	 	"那麼，你怎麼說？願意做個小交換嗎？",
+ 	 	 	 	 	"現在不是你交易的時候嗎？",
+ 	 	 	 	 	"歡迎來到我簡陋的貿易站。",
+ 	 	 	 	 	"讓我們來看看你帶了什麼來。",
+ 	 	 	 	 	"這不是你的普通商店。",
+ 	 	 	 	 	"你給我帶了什麼？",
+ 	 	 	 	 	"腰部和背部的小包和大包！",
+ 	 	 	 	 	"我在追求數量而不是質量。",
+ 	 	 	 	 	"怎麼樣？你要不要交易？",
+ 	 	 	 	 	"看起來你可以用更多的空間來儲存東西。",
+ 	 	 	 	 	"你這樣拖著你所有的東西，難道不累嗎？",
+ 	 	 	 	 	"看來有人需要一個新的背包。",
+ 	 	 	 	 	"如果你喜歡它，就把它裝進袋子裡！",
+ 	 	 	 	 	"你的口袋似乎滿了。我可以幫你減輕這個負擔。",
+ 	 	 	 	 	"你的手臂上裝滿了東西，怎麼能打仗呢？",
+ 	 	 	 	 	"你知道，你不必把你的所有東西都裝在你的口袋裡。",
+ 	 	 	 	 	"這樣吧，你把你的舊背包給我，我給你一個新背包。",
+ 	 	 	 	 	"你走路的樣子讓我覺得你負荷太重。",
+ 	 	 	 	 	"當你想保證背包的安全時，你可以來跟我說。"					
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
