--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"toGang": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "갱단 본부로 가기",
+ 	 	 	 	 	"trans": "갱 본부로 가기",
  	 	 	 	 	"eng": "Go to gang headquarters"
  	 	 	 	}
  	 	 	}
@@ -248,7 +248,7 @@
  	 	},
  	 	"gang": {
  	 	 	"name": {
- 	 	 	 	"trans": "갱단 본부",
+ 	 	 	 	"trans": "갱 본부",
  	 	 	 	"eng": "Gang Headquarters"
  	 	 	},
  	 	 	"description": {
@@ -286,7 +286,7 @@
  	 	},
  	 	"cosmetic": {
  	 	 	"name": {
- 	 	 	 	"trans": "코스메틱 사이버웨어",
+ 	 	 	 	"trans": "코스메틱 미용실",
  	 	 	 	"eng": "Cosmetic Cyberwear"
  	 	 	},
  	 	 	"tut": {
@@ -308,7 +308,7 @@
  	 	},
  	 	"printer": {
  	 	 	"name": {
- 	 	 	 	"trans": "3D 분자 인쇄기",
+ 	 	 	 	"trans": "분자 3D 프린터",
  	 	 	 	"eng": "Molecular 3d Printer"
  	 	 	},
  	 	 	"tut": {
@@ -407,7 +407,7 @@
  	 	},
  	 	"equipmentUpgrade": {
  	 	 	"name": {
- 	 	 	 	"trans": "장비 강화소",
+ 	 	 	 	"trans": "장비 교정소",
  	 	 	 	"eng": "Calibration Station"
  	 	 	},
  	 	 	"description": {
@@ -421,9 +421,9 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"강화 코어를 기계에 넣으면 장비의 강화을 도와줄게.",
- 	 	 	 	 	"장비 강화은 도와줄 수 있지만, 장비가 파괴되더라도 나한테 뭐라고 하지마.",
+ 	 	 	 	 	"장비 강화은 도와줄 수 있지만, 장비가 파괴되더라도 나한테 뭐라 하지 말라고?.",
  	 	 	 	 	"내 이름은 카미코야. 저쪽의 미녀는 칼리. 그녀는 약간.. 변덕스러워.",
- 	 	 	 	 	"강화 코어를 넣으면 30분 정도 걸려. 여기서 기다릴 수도 있지만.. 그러진 않길 바랄게."
+ 	 	 	 	 	"강화 코어를 넣으면 30분 정도 걸려. 여기서 기다릴 수도 있지만.. 그러진 않는게 좋을걸?."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -469,7 +469,7 @@
  	"action": {
  	 	"increasePrint": {
  	 	 	"name": {
- 	 	 	 	"trans": "인쇄 공장에서 일하기",
+ 	 	 	 	"trans": "인쇄 공장 작업",
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
@@ -499,11 +499,11 @@
  	 	},
  	 	"reverseEngineer": {
  	 	 	"name": {
- 	 	 	 	"trans": "역공학",
+ 	 	 	 	"trans": "조각 역변환",
  	 	 	 	"eng": "Reverse Engineer Scraps"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "공학 조각을 분석하여 인쇄 레벨을 높입니다. \r\n        약간의 공학 조각을 소모해야 합니다.",
+ 	 	 	 	"trans": "공학 조각을 분석하여 인쇄 레벨을 높입니다. \r\n        공학 조각을 소모해야 합니다.",
  	 	 	 	"eng": "Reverse engineer tech scrap to improve your Print Rank. \r\n        You’ll need to sacrifice some of your tech scrap."
  	 	 	}
  	 	},
@@ -536,7 +536,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "${zoneName}에서 탐색하기",
+ 	 	 	 	"trans": "${zoneName} 탐색",
  	 	 	 	"eng": "Scavenge in ${zoneName}"
  	 	 	},
  	 	 	"description": {
@@ -854,7 +854,7 @@
  	 	},
  	 	"healingArea3": {
  	 	 	"name": {
- 	 	 	 	"trans": "[의료]  조잡한 나노 의료 드론",
+ 	 	 	 	"trans": "[의료] 조잡한 나노 의료 드론",
  	 	 	 	"eng": "Degraded nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -904,7 +904,7 @@
  	 	},
  	 	"healingArea8": {
  	 	 	"name": {
- 	 	 	 	"trans": "[의료]  진귀한 나노 의료 드론",
+ 	 	 	 	"trans": "[의료] 진귀한 나노 의료 드론",
  	 	 	 	"eng": "Rare Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -1125,7 +1125,7 @@
  	 	},
  	 	"upgradeActivator": {
  	 	 	"name": {
- 	 	 	 	"trans": "장비 강화 코어",
+ 	 	 	 	"trans": "장비 교정 코어",
  	 	 	 	"eng": "Equipment Calibration Core"
  	 	 	},
  	 	 	"description": {
@@ -1135,7 +1135,7 @@
  	 	},
  	 	"upgradeChanceIncreaser0": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 AI 샤드 (5%)",
+ 	 	 	 	"trans": "교정 AI 샤드 (5%)",
  	 	 	 	"eng": "Calibration AI Shard (5%)"
  	 	 	},
  	 	 	"description": {
@@ -1145,7 +1145,7 @@
  	 	},
  	 	"upgradeChanceIncreaser1": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 AI 샤드 (10%)",
+ 	 	 	 	"trans": "교정 AI 샤드 (10%)",
  	 	 	 	"eng": "Calibration AI Shard (10%)"
  	 	 	},
  	 	 	"description": {
@@ -1155,7 +1155,7 @@
  	 	},
  	 	"upgradeChanceIncreaser2": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 AI 샤드 (50%)",
+ 	 	 	 	"trans": "교정 AI 샤드 (50%)",
  	 	 	 	"eng": "Calibration AI Shard (50%)"
  	 	 	},
  	 	 	"description": {
@@ -1165,7 +1165,7 @@
  	 	},
  	 	"upgradeChanceIncreaser3": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 AI 샤드 (100%)",
+ 	 	 	 	"trans": "교정 AI 샤드 (100%)",
  	 	 	 	"eng": "Calibration AI Shard (100%)"
  	 	 	},
  	 	 	"description": {
@@ -1175,7 +1175,7 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 실패 무효화 나노봇",
+ 	 	 	 	"trans": "교정 실패 무효화 나노봇",
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
@@ -1447,7 +1447,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "보정 AI 샤드 (${percent} %)",
+ 	 	 	 	"trans": "교정 AI 샤드 (${percent} %)",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	}
@@ -1608,7 +1608,7 @@
  	 	 	},
  	 	 	"clearDungeonCoOp": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "던전 프렌즈",
+ 	 	 	 	 	"trans": "던전 친구",
  	 	 	 	 	"eng": "dungeon friends"
  	 	 	 	}
  	 	 	},
@@ -1619,7 +1619,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"dealDamage": {
- 	 	 	 	"trans": "데미지 주기",
+ 	 	 	 	"trans": "피해 주기",
  	 	 	 	"eng": "Deal Damage"
  	 	 	},
  	 	 	"exp": {
@@ -1684,7 +1684,7 @@
  	 	 	}
  	 	},
  	 	"abandonConfirm": {
- 	 	 	"trans": "정말로 이 퀘스트를 포기할 것입니까?",
+ 	 	 	"trans": "정말로 이 퀘스트를 포기하시겠습니까?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	},
  	 	"mobileQuestPage": {
@@ -1696,7 +1696,7 @@
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "보통",
+ 	 	 	 	 	"trans": "일반",
  	 	 	 	 	"eng": "normal"
  	 	 	 	}
  	 	 	},
@@ -1822,12 +1822,12 @@
  	 	 	 	"eng": "Status"
  	 	 	},
  	 	 	"numOfMember": {
- 	 	 	 	"trans": "갱단의 인원수",
+ 	 	 	 	"trans": "갱단 인원",
  	 	 	 	"eng": "Number of members"
  	 	 	},
  	 	 	"gangAction": {
  	 	 	 	"label": {
- 	 	 	 	 	"trans": "갱단 행동들",
+ 	 	 	 	 	"trans": "갱단 메뉴",
  	 	 	 	 	"eng": "Gang Actions"
  	 	 	 	},
  	 	 	 	"kick": {
@@ -1845,7 +1845,7 @@
  	 	 	},
  	 	 	"playerActions": {
  	 	 	 	"label": {
- 	 	 	 	 	"trans": "플레이어 행동들",
+ 	 	 	 	 	"trans": "플레이어 메뉴",
  	 	 	 	 	"eng": "Player Actions"
  	 	 	 	},
  	 	 	 	"sendPrivateMsg": {
@@ -1898,7 +1898,7 @@
  	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
  	 	 	},
  	 	 	"confirm": {
- 	 	 	 	"trans": "너랑, 나랑. 지금 후원.",
+ 	 	 	 	"trans": "지금 바로 기부하세요",
  	 	 	 	"eng": "Donate now"
  	 	 	}
  	 	},
@@ -2032,7 +2032,7 @@
  	 	 	 	"eng": "Language"
  	 	 	},
  	 	 	"langWarning": {
- 	 	 	 	"trans": "이 언어 팩은 이 게임의 플레이어들이 만든 오픈 소스로, 모든 텍스트가 다 번역되어 있지 않을 수 있으며 실수가 있을 수 있습니다. GitHub 페이지에서 편집을 해서 기여해 주시기 바랍니다",
+ 	 	 	 	"trans": "이 언어 팩은 오픈 소스라서 게임의 플레이어들이 기여를 해 주었고, 모든 텍스트가 다 번역되어 있지 않을 수 있으며 실수가 있을 수 있습니다. GitHub 페이지에서 편집을 해서 기여해 주시기 바랍니다",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"playBackgroundMusic": {
@@ -2213,7 +2213,7 @@
  	 	 	 	"eng": "funding"
  	 	 	},
  	 	 	"memberCount": {
- 	 	 	 	"trans": "조직원들",
+ 	 	 	 	"trans": "조직원",
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"nextUpkeepDate": {
@@ -2236,7 +2236,7 @@
  	 	 	 	"eng": "Insufficient Resources"
  	 	 	},
  	 	 	"members": {
- 	 	 	 	"trans": "조직원들",
+ 	 	 	 	"trans": "조직원",
  	 	 	 	"eng": "Members"
  	 	 	},
  	 	 	"editMotto": {
@@ -2348,13 +2348,13 @@
  	 	 	 	 	"eng": "Error"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "강화 실패, 장비 파괴됨",
+ 	 	 	 	 	"trans": "교정 실패, 장비 파괴됨",
  	 	 	 	 	"eng": "Destructive failure accrued"
  	 	 	 	}
  	 	 	},
  	 	 	"upgradeSuccess": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "강화 성공",
+ 	 	 	 	 	"trans": "교정 성공",
  	 	 	 	 	"eng": "Calibration Success"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -2386,7 +2386,7 @@
  	 	 	 	 	"eng": "Core not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "강화 코어를 삽입하세요",
+ 	 	 	 	 	"trans": "교정 코어를 삽입하세요",
  	 	 	 	 	"eng": "Please insert Calibration Core"
  	 	 	 	}
  	 	 	},
@@ -2433,11 +2433,11 @@
  	 	 	 	"eng": "Chance of destructive failure"
  	 	 	},
  	 	 	"selectEquipmentTitle": {
- 	 	 	 	"trans": "강화할 아이템을 선택하세요",
+ 	 	 	 	"trans": "교정할 아이템을 선택하세요",
  	 	 	 	"eng": "Please select an item to calibrate"
  	 	 	},
  	 	 	"upgradeButton": {
- 	 	 	 	"trans": "강화",
+ 	 	 	 	"trans": "교정",
  	 	 	 	"eng": "Calibrate"
  	 	 	},
  	 	 	"increaseSuccessButton": {
@@ -2457,7 +2457,7 @@
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "장비를 강화하기 위해선 장비 강화 코어가 필요합니다",
+ 	 	 	 	"trans": "장비를 교정하기 위해선 장비 교정 코어가 필요합니다",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	}
  	 	},
@@ -2764,7 +2764,7 @@
  	 	 	},
  	 	 	"itemUpgradeButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "강화",
+ 	 	 	 	 	"trans": "교정",
  	 	 	 	 	"eng": "upgrade"
  	 	 	 	}
  	 	 	}
@@ -2992,7 +2992,7 @@
  	 	 	 	"eng": "the best text-based mmorpg"
  	 	 	},
  	 	 	"confirm": {
- 	 	 	 	"trans": "캐릭터 만들기",
+ 	 	 	 	"trans": "캐릭터 생성",
  	 	 	 	"eng": "Create Character"
  	 	 	},
  	 	 	"confirmModal": {
@@ -3109,7 +3109,7 @@
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "다른 넷러너들과 함께 힘을 합쳐 SL 데이터 요새를 해킹하여 모든 플레이어에게 버프를 부여하세요\r\n        넷러너들은 몸과 신경계를 넷에 직접 연결해 각종 해킹이나 첩보 활동을 하는 사람들입니다. 본인의 신경계를 컴퓨터로 이용하기 때문에 후두엽에 연결된 사이버네틱스를 설치하기도 합니다",
+ 	 	 	 	 	 	"trans": "다른 넷러너들과 함께 힘을 합쳐 SL 데이터 요새를 해킹하여 모든 유저들에게 버프를 부여하세요",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
@@ -3441,7 +3441,7 @@
  	 	},
  	 	"actionList": {
  	 	 	"title": {
- 	 	 	 	"trans": "행동들",
+ 	 	 	 	"trans": "메뉴",
  	 	 	 	"eng": "Actions"
  	 	 	}
  	 	},
@@ -3636,7 +3636,7 @@
  	 	 	"eng": "not tradable"
  	 	},
  	 	"itemUpgradeCapacity": {
- 	 	 	"trans": "강화 횟수",
+ 	 	 	"trans": "교정 횟수",
  	 	 	"eng": "Collaboration Capacity"
  	 	},
  	 	"systemStandby": {
@@ -3755,7 +3755,7 @@
  	 	 	 	"eng": "Armor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "적들에게 받는 데미지가 줄어듭니다",
+ 	 	 	 	"trans": "적들에게 받는 피해가 줄어듭니다",
  	 	 	 	"eng": "Decreases damage taken from enemies"
  	 	 	}
  	 	},
@@ -3771,11 +3771,11 @@
  	 	},
  	 	"damage": {
  	 	 	"name": {
- 	 	 	 	"trans": "데미지",
+ 	 	 	 	"trans": "피해",
  	 	 	 	"eng": "Damage"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "당신이 주는 데미지에 영향을 줍니다",
+ 	 	 	 	"trans": "당신이 주는 피해에 영향을 줍니다",
  	 	 	 	"eng": "Directly influences the amount of damage dealt by you"
  	 	 	}
  	 	},
@@ -3791,11 +3791,11 @@
  	 	},
  	 	"critDamage": {
  	 	 	"name": {
- 	 	 	 	"trans": "치명타 데미지",
+ 	 	 	 	"trans": "치명타 피해",
  	 	 	 	"eng": "Crit damage"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "적에게 주는 치명타 데미지가 증가합니다",
+ 	 	 	 	"trans": "적에게 주는 치명타 피해량이 증가합니다",
  	 	 	 	"eng": "Influence the critical attack damage you deal to the enemy"
  	 	 	}
  	 	},
@@ -3867,11 +3867,11 @@
  	 	},
  	 	"damageMultiplier": {
  	 	 	"name": {
- 	 	 	 	"trans": "데미지 배율",
+ 	 	 	 	"trans": "피해 배수",
  	 	 	 	"eng": "Damage multiplier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "가하는 데미지 증가",
+ 	 	 	 	"trans": "가하는 피해 증가",
  	 	 	 	"eng": "Increases damage by percentage"
  	 	 	}
  	 	},
@@ -3881,7 +3881,7 @@
  	 	 	 	"eng": "Defence multiplier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "받는 데미지 감소",
+ 	 	 	 	"trans": "받는 피해 감소",
  	 	 	 	"eng": "Decreases damage received by percentage"
  	 	 	}
  	 	},
@@ -3983,7 +3983,7 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"description": {
- 	 	 	 	"trans": "상자에서 에픽 드랍 확률 증가",
+ 	 	 	 	"trans": "상자에서 에픽 획득 확률 증가",
  	 	 	 	"eng": "Additional epic drop chance from containers"
  	 	 	}
  	 	},
@@ -4385,7 +4385,7 @@
  	 	 	 	"eng": "Reply"
  	 	 	},
  	 	 	"block": {
- 	 	 	 	"trans": "차단하",
+ 	 	 	 	"trans": "차단",
  	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
@@ -5160,7 +5160,7 @@
  	"donationPage": {
  	 	"message": {
  	 	 	"content1": {
- 	 	 	 	"trans": "안녕하세요, 친애하는 유저님들!",
+ 	 	 	 	"trans": "안녕하세요, 친애하는 유저들!",
  	 	 	 	"eng": "Hello, dear players!"
  	 	 	},
  	 	 	"content2": {
@@ -5185,7 +5185,7 @@
  	 	 	"eng": "benefits"
  	 	},
  	 	"TiersTitle": {
- 	 	 	"trans": "후원 티어",
+ 	 	 	"trans": "후원 등급",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"unitPrice": {
@@ -5196,7 +5196,7 @@
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "이 타이틀은 영구적입니다.\r\n        당신의 계정에 영원히 귀속됩니다.",
+ 	 	 	"trans": "이 타이틀은 영구적입니다.\\n 당신의 계정에 영원히 귀속됩니다.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	},
  	 	"unitPriceDiscountEndDate": {
@@ -5321,7 +5321,7 @@
  	 	 	},
  	 	 	"sellItem": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "상인 전직",
+ 	 	 	 	 	"trans": "상인이 되어보세요",
  	 	 	 	 	"eng": "Be a merchant"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5368,7 +5368,7 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "스턴을 거는",
+ 	 	 	"trans": "스턴의",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
@@ -5496,7 +5496,7 @@
  	 	}
  	},
  	"misc,durability": {
- 	 	"trans": "내구성",
+ 	 	"trans": "내구도",
  	 	"eng": "durability"
  	},
  	"equipmentMarks": {
@@ -5592,7 +5592,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	], 
- 	 	 	 	"trans": "${enemyName}가 당신을 공격했습니다} ${value} 피해를 받았습니다", 
+ 	 	 	 	"trans": "${enemyName}가 당신을 공격했습니다 ${value} 피해를 받았습니다", 
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -5600,7 +5600,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	], 
- 	 	 	 	"trans": "${enemyName}을 공격했습니다. ${value}만큼의 피해를 입혔습니다", 
+ 	 	 	 	"trans": "${enemyName}을 공격하여 ${value}만큼의 피해를 줬습니다", 
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
