Spanish translation - small corrections
Small corrections of some words that for some reason we missed, more corrections will come soon but these were of importance.

--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -535,13 +535,13 @@
  	 	},
  	 	"upperArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "vestimenta superior",
+ 	 	 	 	"trans": "Armadura superior",
  	 	 	 	"eng": "upper armor"
  	 	 	}
  	 	},
  	 	"lowerArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "vestimenta inferior",
+ 	 	 	 	"trans": "Armadura inferior",
  	 	 	 	"eng": "lower armor"
  	 	 	}
  	 	},
@@ -769,7 +769,7 @@
  	 	},
  	 	"expMultiplier": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmisor de Optimización de Córtex Frontal",
+ 	 	 	 	"trans": "Transmisor de Optimización del Córtex Frontal",
  	 	 	 	"eng": "Frontal Cortex Optimization Transmitter"
  	 	 	},
  	 	 	"description": {
@@ -1470,11 +1470,11 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"expMultiplier"
  	 	 	 	],
- 	 	 	 	"trans": "Nivel Recomendado:　${maxLevel}+ con ayuda\r\n                    ¡${expMultiplier}x más EXP!\r\n                    Mazmorra de Desafío, loot y EXP extra.\r\n                    Obtén ${keyFragmentDisplayName}\r\n                    No se aconseja entrar si tu Nivel es muy bajo",
+ 	 	 	 	"trans": "Nivel Recomendado:　${maxLevel}+ con ayuda\r\n                    ¡${expMultiplier}x más EXP!\r\n                    Mazmorra de Desafío, botín y EXP extra.\r\n                    Obtén ${keyFragmentDisplayName}\r\n                    No se aconseja entrar si tu Nivel es muy bajo",
  	 	 	 	"eng": "Recommended Level:　${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de loot esperándote!\r\n                        Se recomienda intentarlo con ayuda de otros Netrunners.",
+ 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de botín esperándote!\r\n                        Se recomienda intentarlo con ayuda de otros Netrunners.",
  	 	 	 	"eng": "Are you strong enough? try it out on Challenge Dungeon,\r\n                        there is a strong boss and tons of loot at the end waiting for you!\r\n                        Its recommended to attempt this with other players."
  	 	 	},
  	 	 	"startName": {
@@ -1499,7 +1499,7 @@
  	 	 	 	 	"keyFragmentDisplayName",
  	 	 	 	 	"expMultiplier"
  	 	 	 	],
- 	 	 	 	"trans": "Nivel recomendado:　${maxLevel}+ con ayuda\r\n                    ${expMultiplier}x más EXP! y 4~5x enemigos más fuertes!\r\n                    Mazmorra en modo Banda, loot y EXP extra. \r\n                 El loot de los Jefes es: Raro o mayor \r\n                    *No para debiles de corazón*",
+ 	 	 	 	"trans": "Nivel recomendado:　${maxLevel}+ con ayuda\r\n                    ${expMultiplier}x más EXP! y 4~5x enemigos más fuertes!\r\n                    Mazmorra en modo Banda, botín y EXP extra. \r\n                 El botín de los Jefes es: Raro o mayor \r\n                    *No para debiles de corazón*",
  	 	 	 	"eng": "Recommended Level:　${maxLevel}+ with co-op\r\n                    ${2.3}x more EXP! and 4~5x stronger enemies!\r\n                    Gang mode dungeon, extra loot and exp.\r\n                    *Not for the faint of heart*"
  	 	 	}
  	 	},
@@ -2483,7 +2483,7 @@
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "Consigue Cachés de los enemigos y Mazmorras para imprimir nuevas armas y vestimentas",
+ 	 	 	 	"trans": "Consigue Cachés de los enemigos y Mazmorras para imprimir nuevas armas y armaduras",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -3157,7 +3157,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "En las Mazmorras, no sanarás después de cada pelea, y los enemigos son más fuertes, pero hay más EXP y loot",
+ 	 	 	 	 	"trans": "En las Mazmorras, no sanarás después de cada pelea, y los enemigos son más fuertes, pero hay más EXP y botín",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -3471,7 +3471,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Encontró una caja de loot cerrada con teclado de color, debería poder desbloquearla con la secuencia correcta de colores.",
+ 	 	 	 	 	"trans": "Encuentras una caja de botín cerrada con un teclado de color, deberías poder desbloquearla con la secuencia correcta de colores.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -3736,7 +3736,7 @@
  	 	},
  	 	"armor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Vestimenta",
+ 	 	 	 	"trans": "Armadura",
  	 	 	 	"eng": "Armor"
  	 	 	},
  	 	 	"description": {
@@ -3746,7 +3746,7 @@
  	 	},
  	 	"healthRegen": {
  	 	 	"name": {
- 	 	 	 	"trans": "Regenerar vida",
+ 	 	 	 	"trans": "Regeneración de vida",
  	 	 	 	"eng": "Health regen"
  	 	 	},
  	 	 	"description": {
@@ -3812,7 +3812,7 @@
  	 	},
  	 	"stunChance": {
  	 	 	"name": {
- 	 	 	 	"trans": "Stun Chance",
+ 	 	 	 	"trans": "Prob. de Aturdir",
  	 	 	 	"eng": "Stun chance"
  	 	 	},
  	 	 	"description": {
@@ -4366,11 +4366,11 @@
  	 	 	 	"eng": "Send Private Message"
  	 	 	},
  	 	 	"reply": {
- 	 	 	 	"trans": "Respuesta",
+ 	 	 	 	"trans": "Responder",
  	 	 	 	"eng": "Reply"
  	 	 	},
  	 	 	"block": {
- 	 	 	 	"trans": "Cuadra",
+ 	 	 	 	"trans": "Bloquear",
  	 	 	 	"eng": "Block"
  	 	 	}
  	 	},
@@ -4620,7 +4620,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombat": {
- 	 	 	"trans": "Recibirás EXP, ${currencyName} y loot cuando derrotes a los enemigos, \n                 ¡Inténtalo!",
+ 	 	 	"trans": "Recibirás EXP, ${currencyName} y botín cuando derrotes a los enemigos, \n                 ¡Inténtalo!",
  	 	 	"eng": "you will receive exp, ${currencyName} and loots when you defeat enemies,\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -4628,7 +4628,7 @@
  	 	 	"eng": "Click here to attack the enemy"
  	 	},
  	 	"statusInv": {
- 	 	 	"trans": "Haz click en 'TOMAR TODO' para obtener todo el loot",
+ 	 	 	"trans": "Haz click en 'TOMAR TODO' para obtener todo el botín",
  	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
  	 	},
  	 	"dungeonQuest": {
@@ -4636,7 +4636,7 @@
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Recibirás EXP, BTC y loot cuando derrotes a los enemigos, \n                 ¡Inténtalo!",
+ 	 	 	"trans": "Recibirás EXP, BTC y botín cuando derrotes a los enemigos, \n                 ¡Inténtalo!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!"
  	 	}
  	},
@@ -5120,11 +5120,11 @@
  	 	 	"eng": "helmet"
  	 	},
  	 	"upperArmor": {
- 	 	 	"trans": "vestimenta superior",
+ 	 	 	"trans": "Armadura superior",
  	 	 	"eng": "upper armor"
  	 	},
  	 	"lowerArmor": {
- 	 	 	"trans": "vestimenta inferior",
+ 	 	 	"trans": "Armadura inferior",
  	 	 	"eng": "lower armor"
  	 	},
  	 	"boots": {
