Edited the translation of the training
Edited some of the training headings

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -3342,7 +3342,7 @@
  	 	 	 	"eng": "referral"
  	 	 	},
  	 	 	"equipment": {
- 	 	 	 	"trans": "оборудование",
+ 	 	 	 	"trans": "снаряжение",
  	 	 	 	"eng": "equipment"
  	 	 	},
  	 	 	"inventory": {
@@ -3382,7 +3382,7 @@
  	 	 	 	"eng": "resources"
  	 	 	},
  	 	 	"account": {
- 	 	 	 	"trans": "счет",
+ 	 	 	 	"trans": "аккаунт",
  	 	 	 	"eng": "account"
  	 	 	},
  	 	 	"timeSkip": {
