--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1900,7 +1900,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Augmenter la capacité de ${nextSlotSize}",
+ 	 	 	 	"trans": "Augmenter la capacité à ${nextSlotSize}",
  	 	 	 	"eng": "Increase slot to ${nextSlotSize}"
  	 	 	},
  	 	 	"stall": {
@@ -2504,7 +2504,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "Mise à niveau vers ${upgradeToSlot} emplacements",
+ 	 	 	 	"trans": "Augmenter jusqu'à ${upgradeToSlot} emplacements",
  	 	 	 	"eng": "UPGRADE TO ${upgradeToSlot} SLOTS"
  	 	 	},
  	 	 	"takeItemFromVault": {
