--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -144,7 +144,7 @@
  	 	 	 	"eng": "Bank of Arasaka"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "Kamu perlu setidaknya tingkat 5 untuk mengakses bank",
+ 	 	 	 	"trans": "Kamu perlu setidaknya berada di level 5 untuk mengakses bank",
  	 	 	 	"eng": "You need to be at least level 5 to access bank"
  	 	 	},
  	 	 	"defaultLines": {
@@ -166,7 +166,7 @@
  	 	 	 	"eng": "A workbench with the necessary tools allows you to tinker with your equipment."
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "Anda harus setidaknya tingkat 10 untuk mengakses stasiun kalibrasi",
+ 	 	 	 	"trans": "Anda harus setidaknya berada di level 10 untuk mengakses stasiun kalibrasi",
  	 	 	 	"eng": "You need to be at least level 10 to access Calibration Station"
  	 	 	},
  	 	 	"defaultLines": {
